--- a/package.json
+++ b/package.json
@@ -60,5 +60,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxyBackup": "http://localhost:5000",
+  "proxy": "https://hackathon-backend-lsv3.onrender.com"
+  
 }
